# cbox

./: .gitignore  .x  README.md
000-model/: app.cpp
001-stackHeap/: print.cpp  print.h
002-streams/: app.cpp
004-singleton/: app.cpp
005-structure/: app.cpp
01-stackHeap/: app.cpp
010-templates/: app.cpp
011-zmqReqRep/: .x
02-streams/: helpers.hpp
028-enum/: .x
03-text_io/: app.cpp
038-glade3-gtkmm/: CMakeLists.txt
050-VSCode/: .vscode.tbz2  .x  README.md
053-compilerrecursivity/: app.cpp
074-linearRegression/: app.cpp
075-constexpr/: .x  app.cpp
076-Ark/: CMakeLists.txt
077-moveSemantics/: app.cpp
078-writereadStruct/: .gitignore
079-sqlite/: app.cpp
080-inline/: .x  app.cpp  no-inline.asm
082-forLoops/: app.cpp
084-zmqVentilatorSink/: vrsink.cpp
085-variadicMacro/: app.cpp
086-cryptoppAES/: CMakeLists.txt
087-cryptoppRSA/: message.txt
088-format/: CMakeLists.txt  app.cpp
090-cmakeInstall/: .x  CMakeLists.txt  app_helloworld.cpp
090-cmakeInstall/include/: helloworld.hpp
091-std_move/: CMakeLists.txt  app.cpp
092-tensorflow/: CMakeLists.txt
093-conan/: .x  CMakeLists.txt  README.md  app.cpp  conanfile.txt
093-conan/ciexample/: .gitlab-ci.yml  .x  CMakeLists.txt  VERSION  conanfile.py
093-conan/ciexample/src/: CMakeLists.txt  helloworld.cpp
095-typedefstruct/: CMakeLists.txt
096-conan/: CMakeLists.txt
096-ctypes/: .x  CMakeLists.txt  app.py  client.py  secbroker.cpp  secbroker.py  secbroker_c.cpp
096-ctypes-simple/: .x  CMakeLists.txt  app.cpp
096-ctypes/1-headers/: .gitignore  .k  .x  CMakeLists.txt  app.cpp  app.py  hello.cpp  test.cpp  test_c.cpp
096-ctypes/1-headers/include/: hello_c.hpp
096-ctypes/2-class/: app.py  holder.py
096-ctypes/complex/: secbroker.cpp  secbroker_c.cpp
096-ctypes/complex/include/: secbroker.hpp
096-ctypes/headers/: hello.cpp
096-ctypes/headers/include/: hello.hpp
096-ctypes/include/: secbroker.hpp  secbroker_c.hpp
097-aptInstaller/: .gitignore  .x  CMakeLists.txt  Dockerfile  README  README.md  build-app.sh  build-doc.sh  build-image.sh  conanfile.txt  docker-compose.yaml  launch-app.sh  shell-image.sh  test-image.sh
097-aptInstaller/doc/: Doxyfile  helloworld.1
097-aptInstaller/include/: CMakeLists.txt  helloworld.hpp
097-aptInstaller/lib/: CMakeLists.txt  helloworld_lib.cpp
097-aptInstaller/src/: CMakeLists.txt
097-aptInstaller/test/: CMakeLists.txt  helloworld_test.cpp  json_test.cpp
097-ctypes-simple-headers/: app_wrapper.py
097-ctypes1/: .gitignore  .k  .x  CMakeLists.txt  app.cpp  app.py  app_wrapper.py  hello.cpp  hello_c.cpp  holder.cpp
097-ctypes1/include/: hello.hpp  hello_c.hpp  holder.hpp
098-c-from-stdin/: .x  app.bash
098-ctypes-class/: .x  CMakeLists.txt  app.py  holder.cpp  holder.py
099-ctypes/: CMakeLists.txt
099-ctypes-final/: .x  CMakeLists.txt  README  app.py  holder.cpp  secbroker.cpp  secbroker.py
099-ctypes-final/include/: holder.hpp  secbroker.hpp  secbroker_c.hpp
099-factorial/: app.cpp
100-yaml/: README.md  app.cpp
101-yaml2py/: .x  CMakeLists.txt  README.md  app.cpp  conanfile.py  conanfile.txt  config.yaml
102-javabindings/: .x  Bindings.cpp  Bindings.hpp  CMakeLists.txt  buildall.sh
102-javabindings/eu/acme/bindings/: Bindings.java
103-tests/: .gitignore  .x  CMakeLists.txt  app.cpp  test_app.cpp
50-VSCode/: .vscode.tbz  .vscode.tbz2  .vscode.tz  .x  README.md  app.cpp
53-ppicker/: .x  form.cpp  points-matrix.tpl  points_matrix.yaml
53-ppicker/placewilson/: placewilson.kml
72-pointers/: app
73-gtkmm/: CMakeLists.txt  app.cpp
73-homography/: app.cpp
74-linearRegression/: app.cpp
75-constexpr/: CMakeLists.txt  app.cpp
76-Ark/: .x  app.cpp
77-moveSemantics/: app.cpp
78-sqlite/: app.cpp  table.csv
78-writereadStruct/: app.cpp
79-sqlite/: CMakeLists.txt
81-moveConstructorAgain/: app.cpp
82-forLoops/: app.cpp
83-friends/: app.cpp
84-0mqVentilatorSink/: .gitignore  CMakeLists.txt  vrsink.cpp  worker.cpp
84-0mqVentilatorSink/mono/: client.cs
84-zmqVentilatorSink/: .x  CMakeLists.txt  functions.cpp  message.cpp  vrsink.cpp  worker.cpp
84-zmqVentilatorSink/include/: functions.hpp  message.hpp
84-zmqVentilatorSink/mono/: .x  client.cs
86-cryptopp/: app.cpp
87-cryptoppRSA/: app.cpp
88-messaging/: pub.cpp  sub.cpp
88-messaging/include/: functions.hpp  icarrier.hpp
88-zmqPubSub/: .gitignore  .x  CMakeLists.txt  functions.cpp  icarrier.cpp  message.cpp  pub.cpp  server.cpp  sub.cpp
88-zmqPubSub/include/: functions.hpp  icarrier.hpp  message.hpp
89-struct2bytes/: .x  app.cpp
90-cmakeInstall/: .x  CMakeLists.txt  lib_helloworld.cpp
90-cmakeInstall/example/: .x  CMakeLists.txt
91-std_move/: app.cpp
92-tensorflow/: app.cpp
93-enum/: app.cpp
94-templateclass/: app.cpp
95-ocvGstreamer/: CMakeLists.txt  app.cpp
95-typedefstruct/: .x  app.c
95-vlcPlayer/: .x  CMakeLists.txt  app.cpp
96-conan/: .x  CMakeLists.txt  README.md
